# Being-VL-0.5

./: .gitignore  LICENSE  README.md  pyproject.toml
beingvl/: __init__.py
beingvl/config/being-tokenizer-config/: generation_config.json  preprocessor_config.json  processor_config.json  special_tokens_map.json  tokenizer_config.json
beingvl/model/: __init__.py  beingvl.py  vbpe.py
beingvl/scripts/: convert_llama_beingvl.sh  train-stage-1.sh  train-stage-2.sh  train-stage-3.sh
beingvl/scripts/accelerate/: config-0.yaml  zero2.json
beingvl/train/: train.py  train_vbpe.py
beingvl/utils/: convert_llama_beingvl.py  tokenize_dataset.py
docs/: Data.md  Inference.md  Train.md  index.html
transformers/src/transformers/models/chameleon/: modeling_chameleon.py
